--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
   },
   "homepage": "https://github.com/GMDJS/ready_template#readme",
   "devDependencies": {
-    "autoprefixer": "^6.7.6",
+    "autoprefixer": "^6.7.7",
     "browser-sync": "^2.18.8",
     "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
     "gulp-group-css-media-queries": "^1.2.0",
+    "gulp-image": "^2.7.5",
     "gulp-notify": "^3.0.0",
     "gulp-postcss": "^6.3.0",
     "gulp-pug": "^3.3.0",
